adds mostly to requests

--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -3,4 +3,5 @@
         <a routerLink="{{m.route}}" title="{{m.tooltip}}">{{m.display}}</a>
         <span> | </span>
     </span>
+    <object width="200" align="right">menu.component.html</object>
 </nav>
