--- a/src/app/user/user-detail/user-detail.component.html
+++ b/src/app/user/user-detail/user-detail.component.html
@@ -56,7 +56,9 @@
     
         <tr>
             <td colspan="2">
-                <button (click)="delete()" class = "btn btn-danger">Delete</button>
+                <input onclick="return myConfirm();" type="submit" name="deleteUser" class="btn btn-danger" value="Delete">
+         <!--       <a href="delete()" onclick="return confirm('Are you sure you want to Remove?');">Remove</a>
+                <button (click)="delete()" class = "btn btn-danger">Delete</button>  -->
             </td>
         </tr>
     </table>
