--- a/src/app/user/user-login/user-login.component.html
+++ b/src/app/user/user-login/user-login.component.html
@@ -17,6 +17,9 @@
                 <button (click)="login()" class = "btn btn-danger">Login</button>
             </td>
         </tr>
+        <tr>
+            <td colspan="2">{{message}}</td>
+        </tr>     
     </table>
 </div>
 
